2005-10-09  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c
	  (cr_surface_write_to_png): Don't use rb_need_block() for ruby <=
	  1.8.2.

2005-10-08  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Supported all API for
	  cairo_t.
	* samples/png.rb: Followed the avobe changes.

	* packages/cairo/ext/rb_cairo_path.c: Implemented cairo_path_t.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/cairo.def: ditto.

	* packages/cairo/ext/rb_cairo_font_options.c: Fixed a typo.

	* setup.rb: Added workaround for an error on Win32 platform.
	  Patch from Masao Mutoh <mutoh@highway.ne.jp>. Thanks!

	* packages/cairo/ext/rb_cairo_font_options.c: Implemented
	  cairo_font_options_t.
	* packages/cairo/ext/rb_cairo_surface.c: ditto.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/lib/cairo.rb: ditto.

2005-10-07  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext: Added c-mode style configuration header for
	  Emacs.

	* samples/png.rb: Use Cairo::SurfaceImage instead of
	  Cairo::Surface.

	* packages/cairo/ext/rb_cairo_surface.c: Implemented
	  cairo_surface_t.

	* packages/cairo/ext/rb_cairo_exception.c: Sorted "case" in the
	  order of declaration cairo_status_t in cairo.h.

2005-10-06  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/extconf.rb: Fixed Win32 platform problem.
	  Patch from Masao Mutoh <mutoh@highway.ne.jp>. Thanks!

2005-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.h: Support Win32 platform.

	* packages/cairo/ext/extconf.rb: ditto.

	* packages/cairo/ext/cairo.def: Added.

	* packages/cairo/ext/pkg-config.rb: Added. This file is from
	  Ruby/GLib.

2005-10-01  Kouhei Sutou  <kou@cozmixng.org>

	* setup.rb: update to 3.4.0.

2005-09-30  Kouhei Sutou  <kou@cozmixng.org>
